<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageButton
        android:id="@+id/skipPrevButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:contentDescription="@string/skip_prev"
        app:layout_constraintEnd_toStartOf="@+id/playPauseButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_baseline_skip_previous_24"
        tools:ignore="SpeakableTextPresentCheck" />

    <ImageButton
        android:id="@+id/playPauseButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:contentDescription="@string/play_pause"
        app:layout_constraintEnd_toStartOf="@+id/stopButton"
        app:layout_constraintStart_toEndOf="@+id/skipPrevButton"
        app:layout_constraintTop_toTopOf="@+id/skipPrevButton"
        app:srcCompat="@drawable/ic_baseline_play_arrow_24"
        tools:ignore="SpeakableTextPresentCheck" />

    <ImageButton
        android:id="@+id/stopButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:contentDescription="@string/stop"
        app:layout_constraintEnd_toStartOf="@+id/skipNextButton"
        app:layout_constraintStart_toEndOf="@+id/playPauseButton"
        app:layout_constraintTop_toTopOf="@+id/playPauseButton"
        app:srcCompat="@drawable/ic_baseline_stop_24"
        tools:ignore="SpeakableTextPresentCheck,ImageContrastCheck" />

    <ImageButton
        android:id="@+id/skipNextButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:contentDescription="@string/skip_next"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/stopButton"
        app:layout_constraintTop_toTopOf="@+id/stopButton"
        app:srcCompat="@drawable/ic_baseline_skip_next_24"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/titleView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        tools:text="Название композиции"
        android:textSize="18sp"
        android:typeface="serif"
        android:textAlignment="center"
        android:layout_marginTop="8dp"
        android:layout_marginHorizontal="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/playPauseButton" />

    <TextView
        android:id="@+id/errorView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:layout_marginTop="8dp"
        android:textAlignment="center"
        android:textColor="@color/error"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleView"
        tools:text="Сообщение об ошибке" />

    <Button
        android:id="@+id/startStopServiceButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/stop_service"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>